# content-writer-ai-team

./: README.md  pyproject.toml  schema.sql  scraped_data.json  test_agent.py
app/: main.py
app/agent/: __init__.py  graph.py  telegram_bot.py  tools.py
app/agent/skills/: post_writer.md
app/api/: routes.py
app/core/: config.py
app/db/: supabase.py
app/services/: image_search.py  monitor.py  scraper.py  summarizer.py  telegram.py  workers.py
